# comparison-ssg-rust-js

./: LICENSE  README.md  project.code-workspace
dioxus-example/: Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
dioxus-example-plain/: .gitignore  Cargo.toml
dioxus-example/assets/: tailwind.css
dioxus-example/src/: anotherpage.rs  main.rs  subpage.rs
leptos-example/: Cargo.toml  README.md
leptos-example/src/: anotherpage.rs  app.rs  lib.rs  main.rs  subpage.rs
leptos-example/style/: main.scss
next-example/: README.md  bun.lockb  next.config.mjs  package.json
next-example/app/: page.tsx
next-example/app/another-page/: page.tsx
next-example/app/sub-page/: page.tsx
